--- a/appspec.yaml
+++ b/appspec.yaml
@@ -1,14 +1,17 @@
 version: 0.0
 os: linux
 files:
-  - source: /
-    destination: /var/www/html
+  - source: /index.html
+    destination: /var/www/html/
 hooks:
-  AfterInstall:
+  BeforeInstall:
+    - location: scripts/install_dependencies
+      timeout: 300
+      runas: root
     - location: scripts/install_nginx.sh
       timeout: 300
       runas: root
-  ApplicationStart:
+  ApplicationStop:
     - location: scripts/start_nginx.sh
       timeout: 300
       runas: root
